# JniDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yyz/test/jnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/: com_yyz_test_jnidemo_JniTest.h
app/src/main/java/com/yyz/test/jnidemo/: JniTest.java  MainActivity.java
app/src/main/jni/: Android.mk  JniTest.h  c_test.c
app/src/test/java/com/yyz/test/jnidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
